# Witral

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  SKILL.md
references/: acciones.md  flujos.md
server/: README.md  lugares.ejemplo.json  pyproject.toml
server/witral/: __init__.py  archivos.py  basedatos.py  busqueda.py  config.py  copiar.py  gitops.py  movil.py  red.py  seguridad.py  server.py  sintaxis.py  sistema.py  trabajos.py  transporte.py
