[project]
name = "witral"
version = "0.1.0"
description = "Witral — servidor MCP. Modelo lugares x acciones para desarrollo."
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "paramiko",
]

[project.scripts]
witral = "witral.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["witral"]
